--- a/Lab1/exercice2.ipynb
+++ b/Lab1/exercice2.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-09T10:30:46.858537Z",
-     "start_time": "2024-10-09T10:30:10.695649Z"
+     "end_time": "2024-10-09T13:36:01.076632Z",
+     "start_time": "2024-10-09T13:35:59.940101Z"
     }
    },
    "source": [
@@ -15,35 +15,27 @@
     "import matplotlib.pyplot as plt \n",
     "import numpy as np"
    ],
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    }
-   ],
-   "execution_count": 4
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-09T10:31:39.306482Z",
-     "start_time": "2024-10-09T10:31:39.296370Z"
+     "end_time": "2024-10-09T13:36:53.309291Z",
+     "start_time": "2024-10-09T13:36:53.300071Z"
     }
    },
    "cell_type": "code",
    "source": "image = cv2.imread('fondvert.png')  ",
    "id": "9f297be0ea075c6e",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-09T10:31:43.641096Z",
-     "start_time": "2024-10-09T10:31:40.196913Z"
+     "end_time": "2024-10-09T13:36:54.427720Z",
+     "start_time": "2024-10-09T13:36:54.215690Z"
     }
    },
    "cell_type": "code",
@@ -56,10 +48,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x156115010>"
+       "<matplotlib.image.AxesImage at 0x127308350>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -74,13 +66,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 8
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-09T10:32:01.140346Z",
-     "start_time": "2024-10-09T10:32:01.130944Z"
+     "end_time": "2024-10-09T13:36:55.553895Z",
+     "start_time": "2024-10-09T13:36:55.549669Z"
     }
    },
    "cell_type": "code",
@@ -91,13 +83,13 @@
    ],
    "id": "735f3409bd40398c",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-09T10:32:07.723320Z",
-     "start_time": "2024-10-09T10:32:07.515477Z"
+     "end_time": "2024-10-09T13:36:56.782520Z",
+     "start_time": "2024-10-09T13:36:56.680931Z"
     }
    },
    "cell_type": "code",
@@ -111,10 +103,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x155949ad0>"
+       "<matplotlib.image.AxesImage at 0x127994d90>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -129,13 +121,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 10
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-09T10:38:00.281364Z",
-     "start_time": "2024-10-09T10:38:00.133599Z"
+     "end_time": "2024-10-09T14:24:00.539706Z",
+     "start_time": "2024-10-09T14:24:00.406381Z"
     }
    },
    "cell_type": "code",
@@ -150,10 +142,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x156552090>"
+       "<matplotlib.image.AxesImage at 0x131a03c50>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -168,15 +160,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 14
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "249d3f2ee0c06363"
+   "execution_count": 20
   }
  ],
  "metadata": {
